--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,19 +19,31 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <!-- 用于申请获取蓝牙信息进行室内定位 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="您的key" />
-        <service android:name="com.amap.api.location.APSService"></service>
+            android:value="4545370af433d308eee4d49febe717d6" />
+
+        <service android:name="com.amap.api.location.APSService" />
+
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,6 +53,17 @@
         <activity
             android:name=".RouteNaviActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".Login"
+            android:label="@string/title_activity_login" />
+        <!-- <activity android:name=".navigation_intime"></activity> -->
+        <activity android:name=".InputTipsActivity" />
+        <activity android:name=".LoginandSignin.LoginOrSignin" />
+        <activity
+            android:name=".basicActivity"
+            android:label="@string/title_activity_basic"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".intimeNavi"></activity>
     </application>
 
 </manifest>
