--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.3'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.amap.naviquickstart"
         minSdkVersion 14
@@ -27,20 +27,26 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-annotations:27.1.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.amap.api:navi-3dmap:latest.integration'
-    compile 'com.amap.api:location:latest.integration'
-    compile 'com.amap.api:search:latest.integration'
-    compile 'com.squareup.okhttp3:okhttp:3.11.0'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'com.qmuiteam:qmui:1.1.3'
-    compile 'com.android.support:design:26.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.1.3'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.cjj.materialrefeshlayout:library:1.3.0'
-    testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    //implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.amap.api:navi-3dmap:latest.integration'
+    implementation 'com.amap.api:location:latest.integration'
+    implementation 'com.amap.api:search:latest.integration'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.qmuiteam:qmui:1.1.3'
+    implementation 'com.android.support:design:26.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.jakewharton:butterknife:8.5.1'
+    implementation 'com.cjj.materialrefeshlayout:library:1.3.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation ('io.socket:socket.io-client:0.8.3') {//最新包
+        exclude group: 'org.json', module: 'json' //处理： WARNING: Dependency org.json:json:20090211 is ignored
+    }
 }
